--- a/css/bgboard.css
+++ b/css/bgboard.css
@@ -1,21 +1,29 @@
-.gnubg_position_info table {
+.bgboard_container {
+    position: relative;
 	font-family: "Trebuchet MS", sans-serif;
+}
+
+.bgboard_error {
+    color: #ef1032;
+}
+
+.bgboard_position_info table {
 	border-spacing: 1px;
 	border-collapse: collapse;
 	background-color: #bcc;
 }
 
-.gnubg_position_info table td {
+.bgboard_position_info table td {
 	border: 1px solid black;
 	padding: 5px;
 	padding: .2em .5em;
 	white-space: nowrap;
 }
 
-.gnubg_position_info table td img {
+.bgboard_position_info table td img {
 	width: 10pt;
 }
 
-.gnubg_position_info table td, .gnubg_position_info table th {
+.bgboard_position_info table td, .bgboard_position_info table th {
 	border: 2px solid gray;
 }
